--- a/my-app/src/components/Users/User.module.css
+++ b/my-app/src/components/Users/User.module.css
@@ -2,3 +2,11 @@
     width: 100px;
     height: 100px;
 }
+
+.currentPage{
+    font-weight: bold;
+    padding: 5px;
+}
+.pageNum{
+    padding: 5px;
+}
