refactor editableSpan, add FriendsIcon Component

--- a/my-app/src/styles/scss/variables.scss
+++ b/my-app/src/styles/scss/variables.scss
@@ -5,3 +5,4 @@ $textColor: black;
 $secondaryTextColor: #6c757d;
 $mainFont: 'DM Sans', sans-serif;
 $titleFont: 'Kanit', sans-serif;
+$errorColorText: rgba(229, 77, 77, 0.8);
