--- a/my-app/src/common/preloader/Preloader.module.scss
+++ b/my-app/src/common/preloader/Preloader.module.scss
@@ -1,9 +1,10 @@
-.imgPreload{
+.imgPreload {
   position: absolute;
   content: '';
   top: 50%;
   transform: translate(-50%, -50%);
- left: 50%;
-width: 150px;
+  left: 50%;
+  width: 150px;
+  z-index: 5;
 
 }
