--- a/my-app/src/components/MyPosts/MyPosts.module.scss
+++ b/my-app/src/components/MyPosts/MyPosts.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/scss/variables';
 
 .myPosts {
+  margin-top: 24px;
   border-radius: 14px;
   padding: 1rem;
   margin-bottom: 1rem;
