--- a/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
+++ b/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
@@ -21,11 +21,10 @@
       content: 'Change Photo';
       position: absolute;
       cursor: pointer;
-      top: 50%;
-      transform: translate(0, -50%);
+      top: 0;
       left: 0;
       width: 100%;
-      height: 40%;
+      height: 100%;
       color: $textColor;
       background: $activeFieldBackgr;
       opacity: .8;
@@ -36,7 +35,7 @@
       justify-content: center;
       text-transform: uppercase;
       font-size: 14px;
-
+      border-radius: 50%;
 
     }
 
