--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -18,3 +18,12 @@ code {
 *, ::after, ::before {
   box-sizing: border-box;
 }
+li {
+  list-style-type: none;
+
+}
+
+ul {
+  margin-left: 0;
+  padding-left: 0;
+}
