--- a/my-app/src/components/MyPosts/MyPosts.module.scss
+++ b/my-app/src/components/MyPosts/MyPosts.module.scss
@@ -1,21 +1,24 @@
 @import '../../styles/scss/variables';
 
-.myPosts {
-  margin-top: 24px;
-  border-radius: 14px;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
-  background: $activeFieldBackgr;
+.myPostsContainer {
   display: flex;
-  .avatar{
-    height: 50px;
-    border-radius: 50%;
-    max-width: 100%;
-    vertical-align: middle;
-    cursor: pointer;
-  }
-  .postBlock{
+  flex-direction: column;
 
+  .addPostForm {
+    border-radius: 14px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
+    background: $activeFieldBackgr;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+
+
+    .fieldAddPost {
+      width: 60%;
+      margin-bottom: 15px;
+    }
   }
 }
