--- a/my-app/src/components/MyPosts/Post/Post.module.scss
+++ b/my-app/src/components/MyPosts/Post/Post.module.scss
@@ -72,7 +72,7 @@
         font-size: .875em;
         width: 25px;
         height: 25px;
-        background-image: url("./../../../assets/menu.svg");
+        background-image: url("./../../../assets/delete.svg");
         background-size: cover;
         background-position: center;
         cursor: pointer;
