--- a/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
+++ b/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
@@ -13,7 +13,7 @@
   align-items: center;
   display: flex;
 
-  .imgWrapper {
+  .imgWrappOwner {
     position: relative;
     margin: 0;
 
@@ -74,12 +74,27 @@
     }
   }
 
+  .followBtnWrapper {
+    flex-basis: 65%;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .userForm {
   display: flex;
   flex-direction: column;
-
   margin-left: 100px;
 }
 
+.imgWrapp{
+  margin: 0;
+  .profilePhoto {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+  }
+}
