--- a/my-app/src/components/SuperInput/SuperInputText.module.scss
+++ b/my-app/src/components/SuperInput/SuperInputText.module.scss
@@ -8,7 +8,7 @@
   box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
   border-radius:10px;
   min-width: 200px;
-  border: 1px solid $secondaryTextColor;
+  border: 1px solid $activeFieldBackgr;
   background-color: $activeFieldBackgr;
   padding: .5rem 4em .5rem 1rem;
   font-family: $mainFont;
