--- a/my-app/src/components/SuperTextarea/SuperTextarea.module.scss
+++ b/my-app/src/components/SuperTextarea/SuperTextarea.module.scss
@@ -6,7 +6,7 @@
   padding:15px;
   border-radius:15px;
   border:none;
-  box-shadow:4px 4px 10px black;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
   height:150px;
 
 }
