--- a/my-app/src/styles/scss/variables.scss
+++ b/my-app/src/styles/scss/variables.scss
@@ -1,6 +1,7 @@
 $backgroundColor: #edf2f6;
 $buttonBackgr: #0e6dfd;
 $activeFieldBackgr: white;
+$backgrForModal: rgba(0, 0, 0, 0.2);
 $textColor: black;
 $secondaryTextColor: #6c757d;
 $mainFont: 'DM Sans', sans-serif;
