--- a/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
+++ b/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
@@ -12,89 +12,55 @@
   padding-left: 1rem;
   align-items: center;
   display: flex;
+  justify-content: space-between;
 
-  .imgWrappOwner {
-    position: relative;
-    margin: 0;
+  .flexCont {
+    display: flex;
+    align-items: center;
 
-    &:hover::after {
-      content: 'Change Photo';
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      color: $textColor;
-      background: $activeFieldBackgr;
-      opacity: .8;
-      box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
-      text-align: center;
+    .nameBlock {
+      margin-left: 1rem;
       display: flex;
-      align-items: center;
-      justify-content: center;
-      text-transform: uppercase;
-      font-size: 14px;
-      border-radius: 50%;
+      flex-direction: column;
 
-    }
+      .name {
+        font-weight: 700;
+        font-size: 1.3rem;
+        color: $textColor;
+        font-family: $titleFont;
+        display: block;
+        line-height: 1.2;
+        cursor: pointer;
+      }
 
-    .profilePhoto {
-      height: 100px;
-      width: 100px;
-      border-radius: 50%;
-      max-width: 100%;
-      vertical-align: middle;
-      display: inline-block;
-
-
+      .status {
+        color: $secondaryTextColor;
+        margin-bottom: 0;
+        font-size: 15px;
+        cursor: pointer;
+      }
     }
   }
 
-  .nameBlock {
-    margin-left: 1rem;
+
+
+  .settingsBtn {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    background-image: url("./../../../assets/sett.svg");
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    justify-self: flex-end;
+    align-self: center;
+
+  }
+
+  .userForm {
     display: flex;
     flex-direction: column;
-
-    .name {
-      font-weight: 700;
-      font-size: 1.3rem;
-      color: $textColor;
-      font-family: $titleFont;
-      display: block;
-      line-height: 1.2;
-      cursor: pointer;
-    }
-
-    .status {
-      color: $secondaryTextColor;
-      margin-bottom: 0;
-      font-size: 15px;
-      cursor: pointer;
-    }
-  }
-
-  .followBtnWrapper {
-    flex-basis: 65%;
-    display: flex;
-    justify-content: flex-end;
+    margin-left: 100px;
   }
 }
 
-.userForm {
-  display: flex;
-  flex-direction: column;
-  margin-left: 100px;
-}
-
-.imgWrapp{
-  margin: 0;
-  .profilePhoto {
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    max-width: 100%;
-    vertical-align: middle;
-    display: inline-block;
-  }
-}
