--- a/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
+++ b/my-app/src/components/MyPosts/ProfileInfo/ProfileInfo.module.scss
@@ -48,7 +48,7 @@
     position: relative;
     width: 20px;
     height: 20px;
-    background-image: url("./../../../assets/sett.svg");
+    background-image: url("./../../../assets/menu.svg");
     background-size: cover;
     background-position: center;
     cursor: pointer;
