--- a/my-app/src/components/MyPosts/MyPosts.module.scss
+++ b/my-app/src/components/MyPosts/MyPosts.module.scss
@@ -1,19 +1,18 @@
 @import '../../styles/scss/variables';
+@import '../../styles/scss/mixins';
 
 .myPostsContainer {
   display: flex;
   flex-direction: column;
 
   .addPostForm {
-    border-radius: 14px;
     padding: 1rem;
     margin-bottom: 1rem;
-    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
-    background: $activeFieldBackgr;
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
+    @include wrapper;
 
 
     .fieldAddPost {
