--- a/my-app/src/components/Modal/Modal.module.scss
+++ b/my-app/src/components/Modal/Modal.module.scss
@@ -1,4 +1,5 @@
 @import '../../styles/scss/variables';
+@import '../../styles/scss/mixins';
 
 .modalContainer {
   position: fixed;
@@ -10,15 +11,12 @@
   z-index: 5;
 
   .modalBlock {
-    position: absolute;
+    @include wrapper;
+    @include center;
     padding: 20px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 50%;
     color: black;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(to bottom, #99ff99 0%, #ffffcc 100%);
     align-items: center;
     width: 40%;
     max-height: calc(100vh - 100px);
@@ -51,4 +49,5 @@
 .btnSave{
   align-self: center;
   margin-top: 15px;
+  cursor:pointer;
 }
